SOS-1716 fix IE8 user-toolbar alignment

--- a/portlets/so-portlet/docroot/user_bar/css/main.css
+++ b/portlets/so-portlet/docroot/user_bar/css/main.css
@@ -615,3 +615,28 @@ html > body.lfr-dockbar-pinned {
 		}
 	}
 }
+
+.ie8 {
+	.so-portlet-user-bar {
+		.search-input {
+			background: #181c1f;
+		}
+
+		.notifications-menu {
+			margin-top: 0.2em;			
+			.notification-count {
+				margin: 0px 0.1em;
+			}
+		}
+
+		.user-toolbar {
+			.full-name {
+				display: inline;
+			}
+		}
+
+		.config-item {
+			float: right;
+		}
+	}
+}
